awx/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx
  namespace: awx
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: awx-service
      port:
        number: 80
  tls:
  - hosts:
    - AWX_HOST_NAME
    secretName: awx-cert-tls
  rules:
    - host: AWX_HOST_NAME
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: awx-service
                port:
                  number: 80
            path: /
